cambie el background de perfil y devoluciones

--- a/sexshop/appsexshop/static/css/devoluciones.css
+++ b/sexshop/appsexshop/static/css/devoluciones.css
@@ -1,6 +1,6 @@
 /* Estilos generales */
 body {
-    background-color: #fbfafa;
+     background-color:rgba(224, 216, 216, 0.301);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
