--- a/sexshop/appsexshop/static/css/perfil.css
+++ b/sexshop/appsexshop/static/css/perfil.css
@@ -1,6 +1,6 @@
 body {
     font-family:'Times New Roman', Times, serif;
-    background-color:white;
+    background-color:rgba(224, 216, 216, 0.301);
     background-repeat: no-repeat; 
     background-size: cover;
     background-attachment: fixed;
