--- a/sexshop/appsexshop/templates/crud/domiciliarios.html
+++ b/sexshop/appsexshop/templates/crud/domiciliarios.html
@@ -140,7 +140,16 @@
    <div class="container-fluid py-4">
     <div class="row">
       <div class="col-12">
-   
+
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        {% endif %}
+
         <h4 class="card-title" style="text-align: center; color: black;">Gestión de Domiciliarios</h4>
 
         <!-- Button  modal -->
