--- a/sexshop/appsexshop/templates/crud/usuarios.html
+++ b/sexshop/appsexshop/templates/crud/usuarios.html
@@ -132,11 +132,20 @@
     </nav>
 
 
-   <!-- tabla -->
-   <div class="container-fluid py-4">
+  <!-- tabla -->
+  <div class="container-fluid py-4">
     <div class="row">
       <div class="col-12">
-   
+
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        {% endif %}
+
         <h4 class="card-title" style="text-align: center; color: black;">Gestión de Usuarios</h4>
 
         <!-- Button  modal -->
