anadio mensaje de alerta al no encontrar productos en el catalogo

--- a/sexshop/appsexshop/templates/carrito/dildos.html
+++ b/sexshop/appsexshop/templates/carrito/dildos.html
@@ -86,6 +86,12 @@
     </div>
   </div>
 
+  <!-- mensaje de alerta al no encontrar producto -->
+<div id="noResultsMessage" class="text-center my-5 d-none">
+  <img src="{% static 'img/carrito/carrito.png' %}" alt="icono carrito" style="width: 80px;">
+  <p class="text-muted fs-5">No se encontraron productos</p>
+</div>
+
 
       <!-- Modal para Detalles del Producto -->
       <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
