--- a/sexshop/appsexshop/templates/LadingPage.html
+++ b/sexshop/appsexshop/templates/LadingPage.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="{% static 'img/icon.png' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
      <link rel="stylesheet" href="{% static 'css/modal.css' %}">
+      <link rel="stylesheet" href="{% static 'css/catalogo.css' %}"> 
 
     <title>Fantasia Intima</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="{% static 'css/LadingPage_estilos1.css' %}">
     
-  
+   
     <style>
         .search-results-container {
             display: none;
@@ -270,7 +271,7 @@
 
         {% for grupo in productos_agrupados %}
         <div class="carousel-item {% if forloop.first %}active{% endif %}">
-          <div class="row justify-content-center">
+          <div class="row justify-content-center" id="productList">
             {% for prod in grupo %}
               <div class="col-12 col-md-3 mb-4 d-flex justify-content-center">
                 
@@ -295,7 +296,7 @@
                     <p class="card-text">{{ prod.Descripcion }}<br><br>${{ prod.Precio|floatformat:"0" }}</p>
                     <!-- Aquí puedes agregar una descripción del producto si lo deseas -->
           <p class="card-text text-success" style="font-size: 0.95em;">
-  Stock disponible: {{ producto.Cantidad }}
+  Stock disponible: {{ prod.Cantidad }}
 </p>
           <div class="rating">
             {% for i in "54321" %}
