correcto funcionamineto de crud domiciliarios y usuarios

--- a/sexshop/appsexshop/templates/crud/usuarios.html
+++ b/sexshop/appsexshop/templates/crud/usuarios.html
@@ -182,8 +182,8 @@
             <input type="text" class="form-control" id="nombreUsuario" name="NombreUsuario" placeholder="Ingresa el nombre de usuario" required>
           </div>
           <div class="mb-3">
-            <label for="contraseña" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="contraseña" name="Contraseña" placeholder="Ingresa la contraseña" required>
+            <label for="contrasena" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="contrasena" name="Contrasena" placeholder="Ingresa la contraseña" required>
           </div>
       </div>
       <div class="modal-footer">
@@ -268,8 +268,8 @@
                 <input type="text" class="form-control" id="nombreUsuario" name="NombreUsuario" value="{{ usuario.NombreUsuario }}" required>
               </div>
               <div class="mb-3">
-                <label for="contraseña" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="contraseña" name="Contraseña">
+                <label for="contrasena" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="contrasena" name="Contrasena">
               </div>
           </div>
           <div class="modal-footer">
