--- a/sexshop/appsexshop/templates/login/registro.html
+++ b/sexshop/appsexshop/templates/login/registro.html
@@ -44,11 +44,11 @@
         <div class="container3">
           <input type="email" name="Correo" placeholder="Correo" required minlength="3">
           
-          <input type="text" name="NombreUsuario" placeholder="Nombre Usuario" required minlength="8">
+          <input type="text" name="NombreUsuario" placeholder="Nombre Usuario" required>
         </div>
 
         <div class="container4">
-          <input type="password" name="Contraseña" placeholder="Contraseña" required minlength="8">
+          <input type="password" name="Contrasena" placeholder="Contraseña" required minlength="8">
           <button type="submit" class="form-btn">Registrarse</button>
         </div>
       </form>
