--- a/sexshop/appsexshop/templates/crud/domiciliarios.html
+++ b/sexshop/appsexshop/templates/crud/domiciliarios.html
@@ -196,8 +196,8 @@
             <input type="email" class="form-control" id="correo" name="Correo" required>
           </div>
           <div class="mb-3">
-            <label for="contraseña" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="contraseña" name="Contraseña" required>
+            <label for="contrasena" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="contrasena" name="Contrasena" required>
           </div>
       </div>
       <div class="modal-footer">
@@ -294,8 +294,8 @@
                 <input type="email" class="form-control" id="correo" name="Correo" value="{{ domiciliario.Correo }}" required>
               </div>
               <div class="mb-3">
-                <label for="contraseña" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="contraseña" name="Contraseña">
+                <label for="contrasena" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="contrasena" name="Contrasena">
               </div>
           </div>
           <div class="modal-footer">
