--- a/sexshop/appsexshop/templates/login/login.html
+++ b/sexshop/appsexshop/templates/login/login.html
@@ -11,6 +11,11 @@
     <link rel="icon" type="image/png" href="{% static 'img/icon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <style>
+
+      .messages{
+        color:green;
+        margin-top: -5px;
+      }
       .error {
         border: 2px solid rgb(255, 0, 0);
       }
@@ -29,13 +34,23 @@
     <p class="title">Fantasia Intima</p>
     
 
+    {% if messages %}
+      <div class="messages">
+          {% for message in messages %}
+          <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
+              {{ message }}
+          </div>
+          {% endfor %}
+      </div>
+      {% endif %}
+
     <!-- Formulario de login -->
     <form class="form" method="post">
       {% csrf_token %}
       <input type="email" name="correo" class="input" placeholder="Correo Electrónico" required minlength="3">
       <span class="error-message" id="error-email"></span>
 
-      <input type="password" name="contraseña" class="input" placeholder="Contraseña" required minlength="8">
+      <input type="password" name="contrasena" class="input" placeholder="Contraseña" required minlength="8">
       <span class="error-message" id="error-password"></span>
 
       <p class="page-link">
