--- a/sexshop/appsexshop/templates/login/codigo.html
+++ b/sexshop/appsexshop/templates/login/codigo.html
@@ -14,6 +14,15 @@
         color:green;
         font-size: 18px;
       }
+        .message {
+        background-color: rgba(0, 128, 0, 0.1); /* Verde suave */
+        border: 1px solid green;
+        padding: 7px;
+        border-radius: 8px;
+        color: green;
+        font-weight: bold;
+        text-align: center;
+      }
       .messages .error{
         color:red;
         font-size: 18px;
